# elroy

./: .aider.conf.yml  .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  .release-notes  404.html  AGENTS.md  BACKGROUND_INGESTION_PRD.md  CACHED_LLM_CLIENT.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_REVIEW.md  CONTEXT_REFACTOR_REQUIREMENTS.md  CONVENTIONS.md  DEPLOYMENT_CHECKLIST.md  DOCUSAURUS_MIGRATION.md  Dockerfile  Dockerfile.dev  Dockerfile.discord  README.md  REFACTOR.md  ROADMAP.md  TODO.md  UI.md  alembic.ini  cli.html  configuration.html  docker-compose.test.yml  docker-compose.yml  docker_postgres.py  elroy.wsgi  elroy_profile_pre_startup.prof  elroy_profile_pre_startup.txt  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  how_it_works.html  (+29 more)
.github/: publish.yml
.github/workflows/: deploy-docs.yml  publish.yml  release.yml
alembic/: env.py
alembic/versions/: 0c3bf53c898a_add_archival_mem_name.py  45223a2c0c67_init.py  9716bc0dfe9c_initial_tables.py  9b8ff0056f91_add_metadata.py
blog/: index.html  yes-or-no-please.html
blog/yes-or-no-please/: index.html
claude-skills/: README.md  install-skills.sh
claude-skills/introspect/: SKILL.md
claude-skills/make-improvement/: SKILL.md
cli/: index.html  requirements.txt
cli/postgres/: Dockerfile
cli_and_configuration/: index.html
cli_reference/: index.html
configuration/: basic.html  context.html  index.html  memory.html  models.html  tracing.html  ui.html
docs/: README.md  cli.md  cli_and_configuration.md  cli_reference.md  configuration.md  docusaurus.config.ts  how_it_works.md  ideation.md  index.md  installation.md  package-lock.json  package.json  prd-agenda-item-tracking.md  prd-memory.md  prd-product.md  prd-system-status-live-panel.md  prd_textual_ui.md  scripting.md  testing-llm-applications.md  tools_guide.md  tools_schema.md  waitlist.md
docs/blog/: 2025-03-04-yes-or-no-please.md  2025-07-07-autonomy-last.md  2025-07-29-ai-is-a-floor-raiser.md  authors.yml  index.md  tags.yml  yes-or-no-please.md
docs/configuration/: basic.md  index.md  models.md
docs/docs/: cli.md  how_it_works.md  installation.md  intro.md  model_context_protocol.md  roadmap.md  scripting.md  tools_guide.md  tools_schema.md
elroy/: OPENAI_COMPATIBLE_SERVER_REQUIREMENTS.md  __init__.py  __main__.py  api.py  cli.py  config.py  core.py  defaults.yml  logging_config.py  memory.py  messenger.py  models.py  onboard_user.py  system_commands.py  system_context.py  tts.py  voice.py
elroy/alembic/: alembic.ini
elroy/api/: __init__.py  main.py  models.py  web.py
elroy/app/: README.md  package.json
elroy/cli/: bug_report.py  chat.py  config.py  context.py  info.py  local_files.py  main.py  model_alias.py  options.py  remember.py  slash_commands.py  ui.py  updater.py
elroy/config/: config.py  constants.py  ctx.py  defaults.yml  env_vars.py  initializer.py  llm.py  logging.py  model_aliases.py  model_config.py  models.py  models_aliases.py  paths.py  personas.py
elroy/core/: async_tasks.py  background_ingestion.py  background_ingestion_scheduler.py  config.py  configs.py  constants.py  conversation_orchestrator.py  ctx.py  db.py  error_context.py  latency.py  logging.py  memory_file_sync.py  runtime.py  self_diagnosis.py  session.py  session_bootstrap.py  sidebar_models.py  status.py  system_status.py  tracing.py  turn.py
elroy/db/: __init__.py  data_models.py  db_manager.py  db_models.py  db_session.py  dbsession.py  migrate.py
elroy/extras/: run_with_docker_postgres.py
elroy/io/: base.py  cli.py  completer.py  completions.py  live_panel.py  prompt_history.py  status.py  textual_app.py  textual_app2.py  textual_commands.py  textual_forms.py  textual_io.py
elroy/llm/: cache.py  cached_client.py  cached_llm_client.py  client.py  embedding_cache.py  json.py  litellm_parser.py  llm_client.py  mock_stream_parser.py  models.py  parser.py  parsing.py  persona.py  prompts.py  stream_parser.py  templated_client.py  templated_parser.py  tool_call_accumulator.py  utils.py
elroy/mcp/: config.py  server.py
elroy/memory/: archival_facts.py  system_context.py
elroy/messaging/: context.py  messenger.py
elroy/messenger/: claude_code_integration.py  error_recovery.py  messenger.py  slash_commands.py  tools.py
elroy/repository/: data_models.py  embeddable.py  embeddings.py  file_utils.py  memo.py  memo_runtime.py  memory.py  message.py  user.py
elroy/store/: blob_storage.py  data_models.py  embeddings.py  goals.py  message.py  store.py  user.py
elroy/system/: clock.py  ops.py  parameters.py  (+3 more)
elroy_docker/: __init__.py  compose.py  postgres.py
examples/: graph_memories.py  multi_character_game.py  visualize_memories.py
how_it_works/: index.html
installation/: index.html
model_context_protocol/: index.html
prds/: system-status-panel.md
scripting/: index.html
scripts/: announce_release_on_discord.py  cli.sh  discord_bot.py  docker_postgres.py  generate_release_notes.py  ics_to_md.py  install_pre_commit.sh  migrate_to_chroma.py  pre-commit  prep_docs_for_release.py  prepare-docs-for-release.sh  record_demo.sh  release.py  release_patch.py  review_readme.sh  screenshot.py  serve_docs  tail_k8s_logs.sh  test_api.py  test_browsing.py  test_cli.sh  vulture_whitelist.py  wait-for-postgres.sh
search/: search_index.json
tests/: conftest.py  fixtures.py  llm_cache_helper.py  requirements.txt  test_api.py  test_basic_messages.py  test_cli.py  test_command.py  test_config.py  test_consolidate_context.py  test_context_refresh.py  test_contextual_reminders.py  test_db.py  test_embedding_search.py  test_embeddings.py  test_entity_memories.py  test_goals.py  test_json_utils.py  test_memory.py  test_model_config.py  test_onboarding.py  test_query_llm.py  test_self_description.py  test_system_command.py  test_tools.py  test_tui_focus.py  test_user_preferences.py  test_worker.py  utils.py
tools_guide/: index.html
tools_schema/: index.html
web/: index.html
webjobs/: run.sh
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+436 files in other folders)
