[tool.poetry]
name = "elroy"
version = "0.0.49"
description = ""
authors = ["Elroy Bot <bot@elroy.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pgvector = "^0.3.6"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
pyyaml = "^6.0.1"
requests = "^2.32.2"
tiktoken = "^0.7.0"
prompt-toolkit = "^3.0.47"
colorama = "^0.4.6"
rich = "^13.7.1"
toolz = "^0.12.1"
alembic = "^1.13.2"
pytz = "^2024.1"
sqlmodel = "^0.0.21"
docstring-parser = "^0.16"
pygments = "^2.18.0"
litellm = "^1.49.6"
typer = "^0.12.5"
docker = "^7.1.0"
semantic-version = "^2.10.0"
scrubadub = "^2.0.1"

[tool.poetry.extras]
discord = ["discord.py"]
docker-db = ["docker", "psycopg2-binary"]
dev = [
    "bumpversion",
    "pydantic",
    "black",
    "autoflake",
    "pyright",
    "pytest",
    "fawltydeps",
    "typer",
    "isort",
    "vulture",
    "testcontainers",
    "pylint",
    "lorem-text",
    "pytest-xdist",
    "pytest-asyncio"
]

[tool.pyright]
include = [
    "elroy/**/*.py",
    "tests/**/*.py"
]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "dist",
    "build"
]
pythonVersion = "3.11"
verboseOutput = true
reportImportCycles = true
reportUnusedImport = true

[tool.black]
line-length = 140
target-version = ['py39', 'py310', 'py311']


[tool.pytest.ini_options]
    filterwarnings = [
     "ignore::DeprecationWarning"
    ]
    log_cli = true
    log_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
elroy = "elroy.cli.main:main"
elroy-with-docker-db = "elroy.extras.docker_postgres.docker_postgres:main"

[tool.isort]
profile = "black"
src_paths = ["elroy"]
