[project]
name = "elroy"
version = "0.3.0"
description = ""
authors = [
    { name = "Elroy Bot", email = "bot@elroy.ai" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.29",
    "click>=8.1.7",
    "typer>=0.20.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.2",
    "tiktoken>=0.8.0",
    "prompt-toolkit>=3.0.47",
    "colorama>=0.4.6",
    "rich>=13.7.1",
    "toolz>=0.12.1",
    "alembic>=1.13.2",
    "pytz>=2024.1",
    "sqlmodel>=0.0.21",
    "docstring-parser>=0.16",
    "pygments>=2.18.0",
    "litellm>=1.75.5",
    "semantic-version>=2.10.0",
    # Kept for backward compatibility with sqlite-vec vector storage and auto-migration.
    "sqlite-vec>=0.1.6",
    "scikit-learn>=1.6.0",
    "lock>=2018.3.25.2110",
    "importlib-resources",
    "apscheduler>=3.11.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "chromadb>=0.4.22",
]

[project.optional-dependencies]
dev = [
    "bumpversion>=0.6.0",
    "pydantic>=2.10.3",
    "ruff>=0.8.0",
    "ty==0.0.16",
    "pytest>=8.1.1",
    "fawltydeps>=0.15.0",
    "testcontainers>=3.7.1",
    "lorem-text>=2.1",
    "pytest-mock>=3.14.0",
    "langchain-core>=0.3.31",
    "discord-py",
    "pytest-cov>=6.0.0",
    "pytest-rerunfailures",
]

docs = [
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-rss-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-rss-plugin" ,
    "mkdocs-blog-plugin",
    "mkdocs-material",
    "mkdocs-macros-plugin",
]

tracing = [
    "arize-phoenix",
    "arize-phoenix-otel",
    "openinference-instrumentation",
    "openinference-semantic-conventions",
    "openinference-instrumentation-litellm",
]

[project.scripts]
elroy = "elroy.cli.main:app"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "N805",  # first argument of a method should be named 'self'
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["elroy/**/*.py", "tests/**/*.py"]
exclude = [".venv/**", "build/**", "dist/**"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*Pydantic serializer warnings.*:UserWarning",
]
log_cli = true
log_level = "INFO"

[tool.coverage.run]
source = ["elroy"]
omit = [
    "tests/*",
    "examples/*",
    "scripts/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"claude-skills" = "claude-skills"

[tool.hatch.build.targets.sdist.force-include]
"claude-skills" = "claude-skills"
