[project]
name = "elroy"
version = "0.4.0"
description = ""
authors = [
    { name = "Elroy Bot", email = "bot@elroy.ai" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy==2.0.37",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "tiktoken==0.9.0",
    "rich==14.3.3",
    "toolz==1.0.0",
    "alembic==1.14.1",
    "pytz==2024.2",
    "sqlmodel==0.0.22",
    "docstring-parser==0.16",
    "pygments==2.19.2",
    "litellm==1.75.5.post1",
    "semantic-version==2.10.0",
    "scikit-learn==1.6.1",
    "lock==2018.3.25.2110",
    "importlib-resources==6.5.2",
    "apscheduler==3.11.0",
    "chromadb==1.4.1",
    "textual==8.0.2",
]

[project.optional-dependencies]
dev = [
    "bumpversion==0.6.0",
    "pydantic==2.11.4",
    "ruff==0.15.0",
    "ty==0.0.16",
    "pytest==8.3.4",
    "fawltydeps==0.18.0",
    "testcontainers==4.9.1",
    "lorem-text==2.1",
    "pytest-mock==3.14.0",
    "langchain-core==0.3.31",
    "discord-py==2.4.0",
    "pytest-cov==6.0.0",
    "pytest-rerunfailures==15.0",
]

docs = [
    "mkdocs==1.4.3",
    "mkdocs-git-revision-date-localized-plugin==1.3.0",
    "mkdocs-rss-plugin==1.2.0",
    "mkdocs-git-revision-date-localized-plugin==1.3.0",
    "mkdocs-rss-plugin==1.2.0",
    "mkdocs-blog-plugin==0.25",
    "mkdocs-material==9.1.20",
    "mkdocs-macros-plugin==1.3.9",
]

tracing = [
    "arize-phoenix==8.13.1",
    "arize-phoenix-otel==0.8.0",
    "openinference-instrumentation==0.1.23",
    "openinference-semantic-conventions==0.1.14",
    "openinference-instrumentation-litellm==0.1.11",
]

[project.scripts]
elroy = "elroy.io.textual_app:main"

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "RET", # flake8-return
    "PTH", # use pathlib
    "RUF", # Ruff-specific rules
    "TRY", # exception handling hygiene
    "PERF",# perflint
    "FURB",# refurb suggestions
    "C90", # mccabe complexity
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "N805",  # first argument of a method should be named 'self'
    "TRY002",  # custom exception boilerplate is too noisy for this codebase
    "TRY003",  # inline exception messages are acceptable here
    "TRY300",  # prefer direct returns in try blocks where clearer
    "TRY301",  # helper extraction for single raises is not worth the indirection
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 16
max-args = 7
max-statements = 60

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "C901", "TRY003"]
"elroy/db/sqlite/alembic/env.py" = ["ARG001"]
"elroy/core/ctx.py" = ["PLR0913"]
"elroy/io/textual_app.py" = ["C901"]
"elroy/llm/client.py" = ["C901"]
"elroy/messenger/messenger.py" = ["C901"]
"elroy/repository/documents/background.py" = ["C901"]
"elroy/repository/documents/operations.py" = ["C901"]
"elroy/repository/memories/background.py" = ["C901"]
"elroy/tools/schema.py" = ["C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["elroy/**/*.py", "tests/**/*.py"]
exclude = [".venv/**", "build/**", "dist/**"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*Pydantic serializer warnings.*:UserWarning",
]
log_cli = true
log_level = "INFO"

[tool.coverage.run]
source = ["elroy"]
omit = [
    "tests/*",
    "examples/*",
    "scripts/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"claude-skills" = "claude-skills"

[tool.hatch.build.targets.sdist.force-include]
"claude-skills" = "claude-skills"
